old/com_securityHub_vNet_v0_2.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "complianceProfile": {
            "type": "string",
            "metadata": {
                "description": "PCI or no-PCI"
            },
            "defaultValue": "no-pci",
            "allowedValues": [
				"no-pci",
                "pci"
            ]
        },
        "environment": {
            "type": "string",
            "metadata": {
                "description": "Define environment to deploy in"
            },
            "defaultValue": "development",
            "allowedValues": [
				"production",
                "preproduction",
                "development"
            ]
        },
        "LDAPAddressPrefix": {
            "type": "string",
            "defaultValue": "10.25.0.112/28",
            "metadata": {
                "description": "LDAP IP Address"
            }
        },
        "virtualNetworkName": {
            "type": "string",
            "defaultValue": "comit-vnet",
            "metadata": {
                "description": "Name of the existing vNet, Security-Hub"
            }
        },
        "virtualNetworkAddressPrefix": {
            "type": "string",
            "defaultValue": "10.25.0.0/25",
            "metadata": {
                "description": "CIDR block for vNet, Security-Hub"
            }
        },
        "subnetNameDC": {
            "type": "string",
            "defaultValue": "domainControllerSubnet",
            "metadata": {
                "description": "Name for the Domain Controller Subnet"
            }
        },
        "subnetAddressPrefixDC": {
            "type": "string",
            "defaultValue": "10.25.0.0/29",
            "metadata": {
                "description": "CIDR block for Domain Controller Subnet"
            }
        },
        "NSGNameDC": {
            "type": "string",
            "defaultValue": "comit-domainController-nsg",
            "metadata": {
                "description": "Network Security Group Name for Domain Controller Subnet"
            }
        },
        "subnetNameDCMgmt": {
            "type": "string",
            "defaultValue": "domainControllerMgmtSubnet",
            "metadata": {
                "description": "Name for the Domain Controller Management Subnet"
            }
        },
        "subnetAddressPrefixDCMgmt": {
            "type": "string",
            "defaultValue": "10.25.0.8/29",
            "metadata": {
                "description": "CIDR block for Domain Controller Management Subnet"
            }
        },
        "NSGNameDCMgmt": {
            "type": "string",
            "defaultValue": "comit-domainControllerManagement-nsg",
            "metadata": {
                "description": "Network Security Group Name for Domain Controller Management Subnet"
            }
        }
    },
    "variables": {     
        "api-version": "2015-06-15"
    },
    "resources": [     
        {
            "apiVersion": "2015-05-01-preview",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('NSGNameDC')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "security"
            },
            "properties": {
                "securityRules": [
                    {
                    "name": "allow-psh",
                        "properties": {
                            "description": "WinRM Management (TCP/5986)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDCMgmt')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },      
                    {
                    "name": "allow-rdp",
                        "properties": {
                            "description": "RDP Management (TCP/3389)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDCMgmt')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },         
                    {
                    "name": "allow-https",
                        "properties": {
                            "description": "HTTPS Azure Sync (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDCMgmt')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },    
                    {
                    "name": "allow-ldap-1",
                        "properties": {
                            "description": "LDAP (TCP/636)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "636",
                            "sourceAddressPrefix": "[parameters('LDAPAddressPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                        }
                    },
                    {
                    "name": "allow-dns",
                        "properties": {
                            "description": "DNS (TCP/53)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix":"[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix":  "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    },           
                    {
                    "name": "deny-all",
                        "properties": {
                            "description": "Deny all traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-05-01-preview",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('NSGNameDCMgmt')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "security"
            },
            "properties": {
                "securityRules": [
                    {
                    "name": "allow-psh",
                        "properties": {
                            "description": "WinRM Management (TCP/5986)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },      
                    {
                    "name": "allow-rdp",
                        "properties": {
                            "description": "RDP Management (TCP/3389)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Outbound"
                        }
                    },         
                    {
                    "name": "allow-https",
                        "properties": {
                            "description": "HTTPS Azure Sync (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "INTERNET",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound"
                        }
                    },    
                    {
                    "name": "allow-ldap-1",
                        "properties": {
                            "description": "LDAP (TCP/636)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "636",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('LDAPAddressPrefix')]",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Outbound"
                        }
                    },  
                    {
                    "name": "allow-dns",
                        "properties": {
                            "description": "DNS (TCP/53)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    },         
                    {
                    "name": "deny-all",
                        "properties": {
                            "description": "Deny all traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('api-version')]",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworkName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NSGNameDC'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NSGNameDCMgmt'))]"
            ],
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "communications"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('virtualNetworkAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetNameDC')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSGNameDC'))]"
                            }
                        }
                    },
                    {
                        "name": "[parameters('subnetNameDCMgmt')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetAddressPrefixDCMgmt')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSGNameDCMgmt'))]"
                            }
                        }
                    }
                ]
            }
        }        
    ],
    "outputs": {
    }
}
